[tool.poetry]
name = "vortex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
eth-brownie = ">=1.17.0"
ape-safe = ">=0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
